Fabrix Changelog
================

Version 0.1.3
-------------

Released: not released yet

- Fixed bug in detection of duplicated sections in ini_section_editor
- Fixed bug in detection of empty string in hosts list in parse_config

Version 0.1.2
-------------

Released: 20 Oct 2017

- First public release